--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
+	<script type="text/javascript" src="//use.typekit.net/umu8pfg.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 	<section class="container row">
