--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-	<section class="container row">
-		<h1>1140gs CUSTOM</h1>
-		<small>Developed by Manik Rathee (@manikrathee) off of the 1140gs Base</small>
+	<section id="intro" class="container row">
+		<img id="headshot" src="images/headshot.jpg" alt="Michaelangelo">
+		<section class="intro-copy">
+			<h1>Michaelangelo Conte</h1>
+			<h2>This is a subtitle</h2>
+			<a href="#" title="E-mail Michaelangelo">michael@conte.com</a>
+		</section>
 	</section> <!-- /section.container.row -->
+	
+	<div id="main" class="container row">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+	</div> <!-- /main -->
 
 	<script src="js/script-ck.js"></script>
 </body>
