--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 	<meta name="keyword" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
+	<title>Michaelangelo Conte</title>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72.png" />
@@ -26,7 +26,7 @@
 		<img id="headshot" src="images/headshot.jpg" alt="Michaelangelo">
 		<section class="intro-copy">
 			<h1>Michaelangelo Conte</h1>
-			<h2>This is a subtitle</h2>
+			<h2>Writer <span>&amp;</span> Photographer</h2>
 			<a href="#" title="E-mail Michaelangelo">michael@conte.com</a>
 		</section>
 	</section> <!-- /section.container.row -->
