--- a/index.html
+++ b/index.html
@@ -27,15 +27,79 @@
 		<section class="intro-copy">
 			<h1>Michaelangelo Conte</h1>
 			<h2>Writer <span>&amp;</span> Photographer</h2>
-			<a href="#" title="E-mail Michaelangelo">michael@conte.com</a>
+			<a href="mailto:michael.a.conte@comcast.net" title="E-mail Michaelangelo"><span class="ss-icon">email</span> michael.a.conte@comcast.net</a>
 		</section>
 	</section> <!-- /section.container.row -->
 	
-	<div id="main" class="container row">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<section id="cv" class="container row module">
+		
+		<h2><span class="ss-icon">File</span> Curriculum Vitae</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		
+		<section class="item">
+			<h3>
+				<span class="date">2003 - Present</span> 
+				<span class="title">
+					Jersey City Police Reporter/Photographer
+				</span>
+				<span class="company">
+					The Jersey Journal Newspaper (circ. 30,000) 
+				</span>
+				<span class="location">Jersey City, NJ</span>
+			</h3>
+			<p class="description">Aggressively report breaking news in a gritty city of 250,000 residents. Writing multiple daily stories on deadline for online publication and print. Work closely with photographers, as well as take my own photographs.</p>
+			<p class="special">
+				<span class="date">April 19-24, 2005</span>
+				Corresponded from Vatican City, covering the election of Pope Benedict XVI and events culminating in his inaugural mass.
+			</p>
+			<p class="special">
+				<span class="date">2001-2002</span>
+				Municipal Reporter covering six municipalities in northern Hudson County, NJ,  approx. pop 600,000 
+			</p>
+			<p class="special">
+				<span class="date">2000 - 2001</span>
+				Municipal Reporter covering Bayonne, NJ, approx. pop. 60,000.
+			</p>
+		</section>
+		
+		
+		
+		<section class="item">
+			<h3>
+				<span class="date">1998 - 2000</span>
+				<span class="title">
+					Reporter/Clerk
+				</span>
+				<span class="company">
+					The Newark Star-Ledger
+				</span>
+				<span class="location">Newark, NJ</span>
+			</h3>
+			<p class="description">Wrote hundreds of stories on varied topics, including front page and section front page stories.  Circulation 600,000</p>
+		</section>
+		
+		
+		
+		<section class="item">
+			<h3>
+				<span class="date">1998 - 2000</span> 
+				<span class="title">
+					Assistant Manager
+				</span>
+				<span class="company">
+					Mack-Conte Funeral Home
+				</span>
+				<span class="location">Jersey City, NJ</span>
+			</h3>
+			<p class="description">//////</p>
+		</section>
+		
 
-		<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-	</div> <!-- /main -->
+	</section> <!-- /main -->
+	
+	<section id="photos" class="container row module">
+		<h2><span class="ss-icon">Image</span> Latest Photos:</h2>
+	</section>
 
 	<script src="js/script-ck.js"></script>
 </body>
