added more base styles and positioning changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section id="cv" class="container row module">
 		
 		<h2><span class="ss-icon">File</span> Curriculum Vitae</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<p class="statement">This would be my mission statement. maybe a sentence or two long. Maybe even a little longer. who knows</p>
 		
 		<section class="item">
 			<h3>
@@ -48,17 +48,20 @@
 				<span class="location">Jersey City, NJ</span>
 			</h3>
 			<p class="description">Aggressively report breaking news in a gritty city of 250,000 residents. Writing multiple daily stories on deadline for online publication and print. Work closely with photographers, as well as take my own photographs.</p>
+			
 			<p class="special">
 				<span class="date">April 19-24, 2005</span>
-				Corresponded from Vatican City, covering the election of Pope Benedict XVI and events culminating in his inaugural mass.
+				<span class="description">Corresponded from Vatican City, covering the election of Pope Benedict XVI and events culminating in his inaugural mass.</span>
 			</p>
+			
 			<p class="special">
 				<span class="date">2001-2002</span>
-				Municipal Reporter covering six municipalities in northern Hudson County, NJ,  approx. pop 600,000 
+				<span class="description">Municipal Reporter covering six municipalities in northern Hudson County, NJ,  approx. pop 600,000 </span>
 			</p>
+			
 			<p class="special">
 				<span class="date">2000 - 2001</span>
-				Municipal Reporter covering Bayonne, NJ, approx. pop. 60,000.
+				<span class="description">Municipal Reporter covering Bayonne, NJ, approx. pop. 60,000.</span>
 			</p>
 		</section>
 		
@@ -97,8 +100,13 @@
 
 	</section> <!-- /main -->
 	
+	
+	<section id="awards" class="container row module">
+		<h2><span class="ss-icon">Bookmark</span> Awards &amp; Recognition:</h2>
+	</section>
+	
 	<section id="photos" class="container row module">
-		<h2><span class="ss-icon">Image</span> Latest Photos:</h2>
+		<h2><span class="ss-icon">Image</span> Photos:</h2>
 	</section>
 
 	<script src="js/script-ck.js"></script>
