added scroll function, awards, award styles and more

--- a/index.html
+++ b/index.html
@@ -103,6 +103,79 @@
 	
 	<section id="awards" class="container row module">
 		<h2><span class="ss-icon">Bookmark</span> Awards &amp; Recognition:</h2>
+		<ul>
+			
+			<li class="award award-item">
+			    <span class="award-title">2013 New Jersey Press Association (NJPA)</span>
+			    <span class="award-description">Third Place award (dailies under 35,000 circ.) for coverage of Hoboken, NJ, man falsely identified as gunman in mass shooting at Newtown, Conn., grammar school (with colleagues.)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2012 NJPA </span>
+			    <span class="award-description">First Place for Special Issue category "We Remember" section commemorating the 10th anniversary of Sept. 11 attacks. </span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2011 NJPA </span>
+			    <span class="award-description">Third Place for coverage a playground shooting in which a 5-year-old girl was critically injured (with colleagues)  </span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2011 NJPA </span>
+			    <span class="award-description">Second Place for coverage of the murder of a Jersey City, NJ, couple returning from their engagement party (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2010 NJPA </span>
+			    <span class="award-description">First Place for Reporting and Writing Breaking News, for coverage of the massive Jersey corruption sting that swept up numerous Hudson County politicians (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2010 NJPA </span>
+			    <span class="award-description">Second place for Reporting and Writing Breaking News for coverage of five police officers shot during a raid on a Jersey City apartment building (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2009 NJPA - Responsible Journalism and Public Service Award</span>
+			    <span class="award-description">Second Place for expose of the Hoboken Police Department's SWAT team scandal (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2008 Garden State Journalists Association - The Hildy Johnson Award</span>
+			    <span class="award-description">For "Gunned Down in Bullet-Town," a my story about a shooting death in Jersey City housing complex</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2007 NJPA</span>
+			    <span class="award-description">Third Place for Spot News Reporting for coverage of the arrest in Bradley Beach, NJ, of Jersey City Mayor Jerramiah Healy (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2005 NJPA</span>
+			    <span class="award-description">Third place for “Reporting and Writing Breaking News”</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2004 NJPA</span>
+			    <span class="award-description">Third Place - “First Amendment Award”</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2002 NJPA</span>
+			    <span class="award-description">Award for “Breaking News Coverage of Sept. 11, 2001” terrorist attacks (with colleagues)</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2001 The American Relay Radio </span>
+			    <span class="award-description">League’s National “2001 Bill Leonard Professional Media Award” for coverage of Hudson County, NJ, HAM radio operator efforts to assist in Sept. 11, 2001 rescue and recovery</span>
+			</li>
+
+			<li class="award award-item">
+			    <span class="award-title">2000 The first Rutgers-Newark</span>
+			    <span class="award-description">Observer Newspaper “Journalism Award”</span>
+			</li>
+		</ul>
+	
 	</section>
 	
 	<section id="photos" class="container row module">
