added back to top logic

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
 	<section id="photos" class="container row module">
 		<h2><span class="ss-icon">Image</span> Photos:</h2>
 	</section>
+	
+	<a id="back-to-top" href="#" title="Back To Top">Return to the Top</a>
 
 	<script src="js/script-ck.js"></script>
 </body>
