updated awards, css

--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@
 			<a href="mailto:michael.a.conte@comcast.net" title="E-mail Michaelangelo"><span class="ss-icon">email</span> michael.a.conte@comcast.net</a>
 		</section>
 	</section> <!-- /section.container.row -->
-	
+
 	<section id="cv" class="container row module">
-		
+
 		<h2><span class="ss-icon">File</span> Curriculum Vitae</h2>
 		<p class="statement">This would be my mission statement. maybe a sentence or two long. Maybe even a little longer. who knows</p>
-		
+
 		<section class="item">
 			<h3>
-				<span class="date">2003 - Present</span> 
+				<span class="date">2003 - Present</span>
 				<span class="title">
 					Jersey City Police Reporter/Photographer
 				</span>
 				<span class="company">
-					The Jersey Journal Newspaper (circ. 30,000) 
+					The Jersey Journal Newspaper (circ. 30,000)
 				</span>
 				<span class="location">Jersey City, NJ</span>
 			</h3>
 			<p class="description">Aggressively report breaking news in a gritty city of 250,000 residents. Writing multiple daily stories on deadline for online publication and print. Work closely with photographers, as well as take my own photographs.</p>
-			
+
 			<p class="special">
 				<span class="date">April 19-24, 2005</span>
 				<span class="description">Corresponded from Vatican City, covering the election of Pope Benedict XVI and events culminating in his inaugural mass.</span>
 			</p>
-			
+
 			<p class="special">
 				<span class="date">2001-2002</span>
 				<span class="description">Municipal Reporter covering six municipalities in northern Hudson County, NJ,  approx. pop 600,000 </span>
 			</p>
-			
+
 			<p class="special">
 				<span class="date">2000 - 2001</span>
 				<span class="description">Municipal Reporter covering Bayonne, NJ, approx. pop. 60,000.</span>
 			</p>
 		</section>
-		
-		
-		
+
+
+
 		<section class="item">
 			<h3>
 				<span class="date">1998 - 2000</span>
@@ -80,12 +80,12 @@
 			</h3>
 			<p class="description">Wrote hundreds of stories on varied topics, including front page and section front page stories.  Circulation 600,000</p>
 		</section>
-		
-		
-		
+
+
+
 		<section class="item">
 			<h3>
-				<span class="date">1998 - 2000</span> 
+				<span class="date">1998 - 2000</span>
 				<span class="title">
 					Assistant Manager
 				</span>
@@ -96,27 +96,27 @@
 			</h3>
 			<p class="description">//////</p>
 		</section>
-		
+
 
 	</section> <!-- /main -->
-	
-	
+
+
 	<section id="awards" class="container row module">
 		<h2><span class="ss-icon">Bookmark</span> Awards &amp; Recognition:</h2>
 		<ul>
-			
+
 			<li class="award award-item">
-			    <span class="award-title">2013 New Jersey Press Association (NJPA)</span>
+			    <span class="award-title">2013 New Jersey Press Association (NJPA), <i>3<sup>rd</sup> Place</i></span>
 			    <span class="award-description">Third Place award (dailies under 35,000 circ.) for coverage of Hoboken, NJ, man falsely identified as gunman in mass shooting at Newtown, Conn., grammar school (with colleagues.)</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2012 NJPA </span>
+			    <span class="award-title">2012 NJPA, <i>1<sup>st</sup> place</i></span>
 			    <span class="award-description">First Place for Special Issue category "We Remember" section commemorating the 10th anniversary of Sept. 11 attacks. </span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2011 NJPA </span>
+			    <span class="award-title">2011 NJPA, <i>3<sup>rd</sup> Place</i></span>
 			    <span class="award-description">Third Place for coverage a playground shooting in which a 5-year-old girl was critically injured (with colleagues)  </span>
 			</li>
 
@@ -175,13 +175,13 @@
 			    <span class="award-description">Observer Newspaper “Journalism Award”</span>
 			</li>
 		</ul>
-	
+
 	</section>
-	
+
 	<section id="photos" class="container row module">
 		<h2><span class="ss-icon">Image</span> Photos:</h2>
 	</section>
-	
+
 	<a id="back-to-top" href="#" title="Back To Top">Return to the Top</a>
 
 	<script src="js/script-ck.js"></script>
