updated scrolled styles

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-	<section id="intro" class="container row">
-		<img id="headshot" src="images/headshot.jpg" alt="Michaelangelo">
-		<section class="intro-copy">
-			<h1>Michaelangelo Conte</h1>
-			<h2>Writer <span>&amp;</span> Photographer</h2>
-			<a href="mailto:michael.a.conte@comcast.net" title="E-mail Michaelangelo"><span class="ss-icon">email</span> michael.a.conte@comcast.net</a>
-		</section>
+	<section id="intro">
+		<div class="container row">
+			<img id="headshot" src="images/headshot.jpg" alt="Michaelangelo">
+			<section class="intro-copy">
+				<h1>Michaelangelo Conte</h1>
+				<h2>Writer <span>&amp;</span> Photographer</h2>
+				<a href="mailto:michael.a.conte@comcast.net" title="E-mail Michaelangelo"><span class="ss-icon">email</span> michael.a.conte@comcast.net</a>
+			</section>
+		</div>
 	</section> <!-- /section.container.row -->
 
 	<section id="cv" class="container row module">
