--- a/index.html
+++ b/index.html
@@ -108,32 +108,32 @@
 		<ul>
 
 			<li class="award award-item">
-			    <span class="award-title">2013 New Jersey Press Association (NJPA), <i>3<sup>rd</sup> Place</i></span>
+			    <span class="award-title">2013 New Jersey Press Association (NJPA), <i>3rd Place</i></span>
 			    <span class="award-description">Third Place award (dailies under 35,000 circ.) for coverage of Hoboken, NJ, man falsely identified as gunman in mass shooting at Newtown, Conn., grammar school (with colleagues.)</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2012 NJPA, <i>1<sup>st</sup> place</i></span>
+			    <span class="award-title">2012 NJPA, <i>1st place</i></span>
 			    <span class="award-description">First Place for Special Issue category "We Remember" section commemorating the 10th anniversary of Sept. 11 attacks. </span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2011 NJPA, <i>3<sup>rd</sup> Place</i></span>
+			    <span class="award-title">2011 NJPA, <i>3rd Place</i></span>
 			    <span class="award-description">Third Place for coverage a playground shooting in which a 5-year-old girl was critically injured (with colleagues)  </span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2011 NJPA </span>
+			    <span class="award-title">2011 NJPA, <i>2nd Place</i></span>
 			    <span class="award-description">Second Place for coverage of the murder of a Jersey City, NJ, couple returning from their engagement party (with colleagues)</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2010 NJPA </span>
+			    <span class="award-title">2010 NJPA, <i>1st Place</i></span>
 			    <span class="award-description">First Place for Reporting and Writing Breaking News, for coverage of the massive Jersey corruption sting that swept up numerous Hudson County politicians (with colleagues)</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2010 NJPA </span>
+			    <span class="award-title">2010 NJPA, <i>2nd Place</i></span>
 			    <span class="award-description">Second place for Reporting and Writing Breaking News for coverage of five police officers shot during a raid on a Jersey City apartment building (with colleagues)</span>
 			</li>
 
@@ -148,17 +148,17 @@
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2007 NJPA</span>
+			    <span class="award-title">2007 NJPA, <i>3rd Place</i></span>
 			    <span class="award-description">Third Place for Spot News Reporting for coverage of the arrest in Bradley Beach, NJ, of Jersey City Mayor Jerramiah Healy (with colleagues)</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2005 NJPA</span>
+			    <span class="award-title">2005 NJPA, <i>3rd Place</i></span>
 			    <span class="award-description">Third place for “Reporting and Writing Breaking News”</span>
 			</li>
 
 			<li class="award award-item">
-			    <span class="award-title">2004 NJPA</span>
+			    <span class="award-title">2004 NJPA, <i>3rd Place</i></span>
 			    <span class="award-description">Third Place - “First Amendment Award”</span>
 			</li>
 
@@ -179,10 +179,10 @@
 		</ul>
 
 	</section>
-
+<!--
 	<section id="photos" class="container row module">
 		<h2><span class="ss-icon">Image</span> Photos:</h2>
-	</section>
+	</section> -->
 
 	<a id="back-to-top" href="#" title="Back To Top">Return to the Top</a>
 
