updated styles, fixed broken elements

--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
 			<h3>
 				<span class="date">2003 - Present</span>
 				<span class="title">
-					Jersey City Police Reporter/Photographer
+					Award Winning Jersey City Police Reporter/Photographer
 				</span>
 				<span class="company">
-					The Jersey Journal Newspaper (circ. 30,000)
+					The Jersey Journal Newspaper (Circ. 30,000 Daily)
 				</span>
 				<span class="location">Jersey City, NJ</span>
 			</h3>
-			<p class="description">Aggressively report breaking news in a gritty city of 250,000 residents. Writing multiple daily stories on deadline for online publication and print. Work closely with photographers, as well as take my own photographs.</p>
-
+			<p class="description">Aggressively report breaking news in a gritty city of 250,000 residents. Writing multiple daily stories on deadline which I immediately post online and for publication in print. Work closely with photographers, as well as take and use my own photographs. Interact daily with officials at city, state, county and federal level, as well as city residents.</p>
 			<p class="special">
 				<span class="date">April 19-24, 2005</span>
 				<span class="description">Corresponded from Vatican City, covering the election of Pope Benedict XVI and events culminating in his inaugural mass.</span>
@@ -67,8 +66,6 @@
 			</p>
 		</section>
 
-
-
 		<section class="item">
 			<h3>
 				<span class="date">1998 - 2000</span>
@@ -83,23 +80,19 @@
 			<p class="description">Wrote hundreds of stories on varied topics, including front page and section front page stories.  Circulation 600,000</p>
 		</section>
 
-
-
 		<section class="item">
 			<h3>
 				<span class="date">1998 - 2000</span>
 				<span class="title">
-					Assistant Manager
+					Editorial Editor/Photographer
 				</span>
 				<span class="company">
-					Mack-Conte Funeral Home
+					Rutgers Newark Observer
 				</span>
-				<span class="location">Jersey City, NJ</span>
+				<span class="location">Newark, NJ</span>
 			</h3>
-			<p class="description">//////</p>
+			<p class="description">Managed editorials as well as a team of reporters and photographers.</p>
 		</section>
-
-
 	</section> <!-- /main -->
 
 
