--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<section id="cv" class="container row module">
 
 		<h2><span class="ss-icon">File</span> Curriculum Vitae</h2>
-		<p class="statement">This would be my mission statement. maybe a sentence or two long. Maybe even a little longer. who knows</p>
+		<p class="statement"></p>
 
 		<section class="item">
 			<h3>
